--- a/src/edd/practica1/Tablero.form
+++ b/src/edd/practica1/Tablero.form
@@ -527,6 +527,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Validar Tiro"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
